<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="capstone.project.tahun.kedua.daurnusantara.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="capstone.project.tahun.kedua.daurnusantara.ui.profil.ProfilFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="capstone.project.tahun.kedua.daurnusantara.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmark" />
</navigation>