<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profil.ProfilFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username2"
        app:layout_constraintStart_toEndOf="@id/profil"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/profil"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"/>

    <ImageView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logout"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        tools:src="@drawable/sd"
        />

</androidx.constraintlayout.widget.ConstraintLayout>