<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="109dp"
        android:src="@drawable/logo5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <View
        android:id="@+id/datauser"
        android:layout_width="292dp"
        android:layout_height="163dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/email"
        android:layout_width="55dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|top"
        android:text="@string/email"
        android:textAppearance="@style/email"
        app:layout_constraintEnd_toEndOf="@+id/datauser"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/datauser"
        app:layout_constraintTop_toTopOf="@+id/datauser" />

    <capstone.project.tahun.kedua.daurnusantara.EmailEditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:hint="@string/emailHint"
        app:layout_constraintEnd_toEndOf="@+id/datauser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/datauser"
        app:layout_constraintTop_toTopOf="@+id/datauser" />

    <View
        android:layout_width="290dp"
        android:layout_height="2dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toTopOf="@+id/email_edit_text" />

    <TextView
        android:id="@+id/password"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:gravity="center_horizontal|top"
        android:text="@string/password"
        android:textAppearance="@style/email"
        app:layout_constraintEnd_toEndOf="@+id/datauser"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/datauser"
        app:layout_constraintTop_toTopOf="@+id/datauser" />

    <capstone.project.tahun.kedua.daurnusantara.PasswordEditText
        android:id="@+id/katasandi"
        android:layout_width="292dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/datauser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/datauser"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <View
        android:layout_width="290dp"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toTopOf="@+id/katasandi" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:alpha="1"
        android:background="@color/tosca"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datauser" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:foregroundGravity="center_horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.475" />

</androidx.constraintlayout.widget.ConstraintLayout>